Fix welcome tile sizes on smaller devices (#373)
* feat: with separate snippets package

* fix: post install upgrade

* feat: use published vscode snippets package

* fix: tile sizes on welcome

* fix: tile heights and variable vertical spacing

* fix: equal height tiles

--- a/src/components/commonHeader/commonHeader.scss
+++ b/src/components/commonHeader/commonHeader.scss
@@ -10,11 +10,6 @@
 @use '@carbon/react/scss/theme' as *;
 @use '@carbon/react/scss/breakpoint' as *;
 
-.cs--common-header {
-  position: relative;
-  margin-block-end: $spacing-09;
-}
-
 .cs--common-header__content {
   // This CSS follow the principles of a condensed carbon grid with 2x2
   display: grid;
